test/Fail/Cumulativity-inequal-universes.err
Cumulativity-inequal-universes.agda:12.9-13: error: [UnequalTypes]
The types
  Set
and
  Set₁
are not equal
when checking that the expression refl has type Set ≡ Set₁
